tests/baselines/reference/parserPostfixPostfixExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parserPostfixPostfixExpression1.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Expressions/parserPostfixPostfixExpression1.ts(1,5): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Expressions/parserPostfixPostfixExpression1.ts(1,7): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parserPostfixPostfixExpression1.ts (3 errors) ====
    a++ ++;
    ~
!!! error TS2304: Cannot find name 'a'.
        ~~
!!! error TS1005: ';' expected.
          ~
!!! error TS1109: Expression expected.